#717: DiffViewer Styling and UI Issues Issue 8: Increase contrast of background colors in scenario and use case tables (added, removed, selected).

--- a/scenarioo-client/app/styles/scenarioo.less
+++ b/scenarioo-client/app/styles/scenarioo.less
@@ -241,7 +241,7 @@ h4 {
 
 .usecase-table tr.selected,.scenario-table tr.selected {
   td, th {
-    background: #f5f5f5;
+    background: #e9f0f7;
   }
 }
 
@@ -859,11 +859,11 @@ span.added {
 .usecase-table, .scenario-table {
   tr.removed {
     cursor: default;
-    background-color: #FDF2F1;
+    background-color: #ffdddc;
   }
 
   tr.added {
-    background-color: #F8FCF7;
+    background-color: #e5f7dd;
   }
 }
 
